Correct author bio

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ mode: light # default theme "dark" | "light"
 author:
   name: K Lokesh # author name
   bio: >- # tell to the world
-    Pre-Doc @ IIT Jodhpur <br>
+    Predoc @ IIT Jodhpur <br>
     Vision Language and Learning Group
 
   username: katikapalli # general username
